@startuml
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "profiles" as profiles {
  *id : uuid <<PK>>
  --
  *user_type : user_type
  full_name : text
  email : text
  phone : text
  avatar_url : text
  location : text
  created_at : timestamp
  updated_at : timestamp
}

entity "services" as services {
  *id : uuid <<PK>>
  --
  *professional_id : uuid <<FK>>
  *title : text
  *description : text
  *price_from : numeric
  price_to : numeric
  *duration_hours : integer
  *max_guests : integer
  *location : text
  images : text[]
  created_at : timestamp
  updated_at : timestamp
}

entity "bookings" as bookings {
  *id : uuid <<PK>>
  --
  *client_id : uuid <<FK>>
  *professional_id : uuid <<FK>>
  *service_id : uuid <<FK>>
  *event_date : date
  *event_time : time
  *guests_count : integer
  *location : text
  *status : booking_status
  *total_price : numeric
  notes : text
  created_at : timestamp
  updated_at : timestamp
}

entity "reviews" as reviews {
  *id : uuid <<PK>>
  --
  *booking_id : uuid <<FK>>
  *client_id : uuid <<FK>>
  *professional_id : uuid <<FK>>
  *rating : integer
  comment : text
  created_at : timestamp
  updated_at : timestamp
}

entity "professional_photos" as professional_photos {
  *id : uuid <<PK>>
  --
  *professional_id : uuid <<FK>>
  *photo_url : text
  created_at : timestamp
}

entity "subscriptions" as subscriptions {
  *id : uuid <<PK>>
  --
  *professional_id : uuid <<FK>>
  *plan_type : subscription_plan_type
  *status : subscription_status
  *start_date : date
  *end_date : date
  *amount : numeric
  payment_method : text
  created_at : timestamp
  updated_at : timestamp
}

profiles "1" -- "0..*" services : "offers"
profiles "1" -- "0..*" bookings : "makes (client)"
profiles "1" -- "0..*" bookings : "receives (professional)"
profiles "1" -- "0..*" reviews : "writes (client)"
profiles "1" -- "0..*" reviews : "receives (professional)"
profiles "1" -- "0..*" professional_photos : "has"
profiles "1" -- "0..*" subscriptions : "has"

services "1" -- "0..*" bookings : "is for"
bookings "1" -- "1" reviews : "has"

@enduml